welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: ';' expected but ')' found.
		if (a%5==b%5) x=minInt(a,b))
                                           ^