welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
	var x=0
	if (a==b) {
		if (a%5==b%5) x=minInt(a,b))
		else x=maxInt(a,b)
	}
	return x	
}
